# Data-Guide

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHARTER.md  README.md  ast_dependency_cli.py  combine_scripts.py  core_seed.yml  purpose_schema.md  pyproject.toml  requirements.txt
codex_++/: CLAUDE.md
codex_++/docs/: ARCHITECTURE_OVERVIEW.md  NOTEBOOK_MODULARIZATION_PLAN.md  RECONCILIATION_PLAN.md  USAGE_GUIDE.md  purpose_schema.md
codex_++/purpose_files/: Design_Document.md  api_client.purpose.md  ast_dependency_cli.purpose.md  bivariate_profiler.purpose.md  combine_scripts.purpose.md  config.purpose.md  data_pipeline.pipeline.purpose.md  data_profiler.purpose.md  data_pull.purpose.md  data_transform.purpose.md  docs_usage_guide.purpose.md  etl-data_from_pdf.purpose.md  inline_html.purpose.md  main.purpose.md  main_pipeline.purpose.md  md_to_html.purpose.md  notebooks_ar_and_collections.purpose.md  notebooks_data_munging.purpose.md  notebooks_insurance_plan_profitability.purpose.md  notebooks_retention.purpose.md  notebooks_retention_attrition.purpose.md  notebooks_scheduling_optimization.purpose.md  notebooks_tighted_ar_collections.purpose.md  pipeline.purpose.md  profiler.purpose.md  profiler_cli.purpose.md  profiler_update.purpose.md  project.purpose.md  purpose_template.md  reconciliation_plan.purpose.md  run_profiler.purpose.md  test_profiler.purpose.md  typer_cli.purpose.md
src/: cli.py  data_profiler.py  pipeline.py  profiler.py  profiler_cli.py  typer_cli.py
src/connectors/: base.py  credentials.py  csv_connector.py  excel_connector.py  json_connector.py  snowflake_connector.py  sql_connector.py  sqlite_connector.py
src/core/: models.py
src/data_guide.egg-info/: PKG-INFO
src/data_pipeline/: bivariate_profiler.py  pipeline.py  pipeline_transformed.purpose.md  pipeline_transformed.py
src/outputs/: html_utils.py  static_report.py
tests/: test_cli.py  test_connectors.py  test_credentials.py  test_models.py  test_static_report.py
(+5 files in other folders)
